Color and Vector2f Updates
 - Color class created,
 - Default values for both Color and Vector2f instances were assigned,
 - Light class updated accordingly,

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,8 @@ SOURCES=Main.cpp \
 		EdgeShadow.cpp \
 		Config.cpp \
 		Display.cpp \
-		Vector2f.cpp
+		Vector2f.cpp \
+		Color.cpp
 
 OBJECTS=$(SOURCES:%.cpp=%.o)
 
