--- a/src/Makefile
+++ b/src/Makefile
@@ -14,7 +14,8 @@ SOURCES=Main.cpp \
 
 OBJECTS=$(SOURCES:%.cpp=%.o)
 
-FLAGS=-g -Wall -Wextra -Werror -Wfatal-errors
+FLAGS=-g -Wall -Wextra -Werror -Wfatal-errors 
+FLAGS+=-O0 -coverage
 CCLIBS=
 
 all: $(OBJECTS)
@@ -24,4 +25,9 @@ all: $(OBJECTS)
 	g++ $(FLAGS) -c -o $*.o $<
 
 clean:
-	$(RM) $(TARGET) *.o *~ core*
+	$(RM) -rf $(TARGET) *.o *~ core* *.gcov *.gcda *.gcno *.info report
+
+coverage: all
+	./$(TARGET)
+	lcov -o report.info -c -d .
+	genhtml -o report --no-branch-coverage report.info 
